# read-dicekey

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  dice-scanner.aps  dice-scanner.cpp  dice-scanner.sln  dice-scanner.vcxproj  dice-scanner.vcxproj.filters  resource.h  squares.cpp
api-jni/: read-keysqr-jni.cpp
dice-scanner.xcodeproj/: project.pbxproj
dicescanner/: assemble-dice-key.h  bimodal.h  bit-operations.h  decode-die.h  dice-key.h  dice-read.h  dice.h  die-face.h  die-specification.h  die.h  distance.h  drawing.h  find-dice.h  find-die-orientation-and-text-region.h  find-rectangles.h  find-squares.h  find-underline.h  find-undoverlines.h  geometry.h  get-dice-from-image.h  inconsolata-700.h  locate-dice.h  main.cpp  ocr.h  point-operations.h  read-dice.h  read-die-characters.h  rectangle.h  rotate.h  sample-point.h  simple-ocr.h  slope.h  squares.cpp  statistics.h  test-box.h  undoverline.h  validate-dice.h  value-clusters.h  vfunctional.h  visualize-read-results.h
lib-dicekey/: CMakeLists.txt  dicekey-from-human-readable-form.cpp  dicekey-from-human-readable-form.hpp  dicekey.cpp  dicekey.h  dicekey.hpp  die-face-specification.h  element-face.cpp  element-face.h  face.cpp  face.hpp  keysqr.cpp  keysqr.h  lib-dicekey.hpp
lib-dicekey/externally-generated/: dicekey-face-specification.cpp  dicekey-face-specification.h  die-face-specification.cpp  die-face-specification.h  keysqr-element-face-specification.cpp  keysqr-element-face-specification.h
lib-keysqr/: CMakeLists.txt  decryption-restrictions.cpp  derive-key.cpp  derive-key.hpp  element-face.cpp  element-face.h  face.cpp  face.h  face.hpp  generate-key.cpp  generate-key.hpp  hash-functions.cpp  hash-functions.hpp  key-derivation-options.cpp  key-derivation-options.hpp  key-generation-options.cpp  key-generation-options.hpp  keysqr-crypt.h  keysqr-element-face-specification.h  keysqr-from-human-readable-form.cpp  keysqr-from-human-readable-form.h  keysqr-from-human-readable-form.hpp  keysqr-from-string.cpp  keysqr-from-string.h  keysqr-generics.h  keysqr.cpp  keysqr.h  keysqr.hpp  lib-keysqr.hpp  sodium-buffer.hpp  sodium-initializer.cpp
lib-keysqr/derived-keys/: application-key.cpp  application-key.hpp  convert.cpp  convert.hpp  crypto_box_seal_salted.cpp  decryption-restrictions.cpp  decryption-restrictions.hpp  derived-key.cpp  derived-key.hpp  derived-keys.hpp  derived-public-private-key-pair.cpp  derived-public-private-key-pair.hpp  global-public-key.hpp  global-public-private-key-pair.cpp  global-public-private-key-pair.hpp  key-derivation-options.cpp  key-derivation-options.hpp  message-with-decryption-restrictions.cpp  message-with-decryption-restrictions.hpp  message.cpp  message.hpp  post-decryption-instructions.cpp  post-decryption-instructions.hpp  public-key.cpp  public-key.hpp  public-private-key-pair.cpp  public-private-key-pair.hpp  scoped-public-key.cpp  scoped-public-key.hpp  scoped-public-private-key-pair.cpp  scoped-public-private-key-pair.hpp  seed.cpp  seed.hpp  signature-verification-key.cpp  signature-verification-key.hpp  signing-key.cpp  signing-key.hpp  sodium-buffer.hpp  sodium-initializer.cpp  symmetric-key.cpp  (+1 more)
lib-keysqr/externally-generated/: key-derivation-parameters.hpp  key-generation-parameters.hpp  keysqr-element-face-specification.cpp  keysqr-face-specification.cpp  keysqr-face-specification.h
lib-read-dicekey/: CMakeLists.txt  assemble-dicekey.cpp  assemble-dicekey.h  assemble-dicekey.hpp  color.h  decode-die.cpp  decode-face.h  dice-read.h  dicekey-face-specification.h  dicekey.hpp  face-read.h  find-dice.cpp  find-dice.h  find-faces.cpp  find-faces.h  find-undoverlines.cpp  find-undoverlines.h  json.h  main.cpp  read-dice.cpp  read-dice.h  read-dicekey.cpp  read-dicekey.hpp  read-die-characters.cpp  read-die-characters.h  read-elements.cpp  read-elements.h  read-face-characters.cpp  read-face-characters.h  read-faces.cpp  read-faces.h  rotate.h  simple-ocr.cpp  simple-ocr.h  undoverline.cpp  undoverline.h  validate-dice-read.cpp  validate-dice-read.h  validate-faces-read.cpp  validate-faces-read.h  (+6 more)
lib-read-dicekey/externally-generated/: inconsolata-700.cpp  inconsolata-700.h
lib-read-dicekey/graphics/: cv.h  draw-rotated-rect.cpp  draw-rotated-rect.h  find-rectangles.cpp  find-rectangles.h  rectangle.h  rotate.h  sample-point.h
lib-read-dicekey/utilities/: bit-operations.h  statistics.h  vfunctional.h
lib-read-keysqr/: CMakeLists.txt  assemble-keysqr.cpp  assemble-keysqr.h  decode-die.cpp  face-read.cpp  face-read.h  find-faces.cpp  find-faces.h  find-undoverlines.cpp  find-undoverlines.h  font.h  json.cpp  json.h  keysqr-crypt.h  keysqr-face-specification.h  read-face-characters.cpp  read-face-characters.h  read-faces.cpp  read-faces.h  read-keysqr-jni.h  read-keysqr.cpp  read-keysqr.h  read-keysqr.hpp  read-keysqr.kt  simple-ocr.cpp  simple-ocr.h  undoverline.cpp  undoverline.h  validate-dice-read.cpp  validate-dice-read.h  validate-faces-read.cpp  validate-faces-read.h  visualize-read-results.cpp  visualize-read-results.h  write-face-characters.cpp  write-face-characters.h
lib-read-keysqr/externally-generated/: inconsolata-700.cpp  ocr-font.h
lib-read-keysqr/graphics/: color.h  cv.h  draw-rotated-rect.cpp  draw-rotated-rect.h  find-rectangles.cpp  find-rectangles.h  geometry.h  rectangle.h  rotate.h  sample-point.h
lib-read-keysqr/utilities/: statistics.h
tests/: CMakeLists.txt
tests/test-lib-dice-key/: CMakeLists.txt  die-face-test.cpp  test-dice-key.cpp  test-die-face.cpp
tests/test-lib-dicekey/: CMakeLists.txt  die-face-test.cpp  test-dicekey-file-inputs.cpp  test-dicekey.cpp  test-die-face.cpp  test-face.cpp
tests/test-lib-keysqr/: CMakeLists.txt  test-crypto-public-global.cpp  test-crypto.cpp  test-die-face.cpp  test-face.cpp  test-key-derivation-options.cpp  test-key-generation-options.cpp  test-keysqr.cpp
tests/test-lib-read-dicekey/: CMakeLists.txt  test-dicekey-file-inputs.cpp
tests/test-lib-read-keysqr/: CMakeLists.txt  test-keysqr-file-inputs.cpp
tests/test-read-dicekey/: CMakeLists.txt
(+31 files in other folders)
